// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBlock should render a login link when unauthorized 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;

exports[`UserBlock should render avatar image when authorized 1`] = `
<div
  className="user-block"
>
  <div
    className="user-block__avatar"
  >
    <a
      href="/mylist"
      onClick={[Function]}
    >
      <img
        alt="User avatar"
        height="63"
        src="img/avatar.jpg"
        width="63"
      />
    </a>
  </div>
</div>
`;
